[gd_scene load_steps=14 format=2]

[ext_resource path="res://art/kenny_edited.png" type="Texture" id=1]
[ext_resource path="res://actors/Enemy/EnemyWithHelmet.gd" type="Script" id=2]
[ext_resource path="res://actors/ActorSingletons/EnemyHitbox.tscn" type="PackedScene" id=3]

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 64, 272, 16, 16 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 48, 272, 16, 16 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 272, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 16, 272, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 32, 272, 16, 16 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 8 ) ],
"loop": true,
"name": "Death",
"speed": 5.0
}, {
"frames": [ SubResource( 9 ) ],
"loop": true,
"name": "Hurt",
"speed": 5.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "Walking",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 5, 3.5 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 4, 3.5 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 4, 1.5 )

[sub_resource type="Animation" id=10]
resource_name = "Hurt"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="EnemyWithHelmet" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -8 )
frames = SubResource( 4 )
animation = "Walking"
playing = true

[node name="EnemyHitbox" parent="." instance=ExtResource( 3 )]
collision_layer = 2
collision_mask = 2

[node name="EnemyHitboxCollision" type="CollisionShape2D" parent="EnemyHitbox"]
position = Vector2( 0, -3.5 )
shape = SubResource( 5 )

[node name="CollisionBody" type="CollisionShape2D" parent="."]
position = Vector2( 0, -3.5 )
shape = SubResource( 6 )

[node name="EnemyHurtbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="EnemyHurtboxCollision" type="CollisionShape2D" parent="EnemyHurtbox"]
modulate = Color( 0.454902, 0.0235294, 0.572549, 1 )
position = Vector2( 0, -8.5 )
shape = SubResource( 7 )

[node name="DeathTimer" type="Timer" parent="."]

[node name="LedgeCheckLeft" type="RayCast2D" parent="."]
position = Vector2( -5, -1 )
enabled = true
cast_to = Vector2( 0, 4 )

[node name="LedgeCheckRight" type="RayCast2D" parent="."]
position = Vector2( 5, -1 )
enabled = true
cast_to = Vector2( 0, 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Hurt = SubResource( 10 )

[node name="HitCooldown" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="EnemyHurtbox" to="." method="_on_EnemyHurtbox_body_entered"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
[connection signal="timeout" from="HitCooldown" to="." method="_on_HitCooldown_timeout"]
